cmake_minimum_required(VERSION 3.8)
project(3d_navi_bringup)
find_package(ament_cmake REQUIRED)
install(DIRECTORY launch/ DESTINATION share/${PROJECT_NAME}/launch)
install(DIRECTORY config/ DESTINATION share/${PROJECT_NAME}/config)
install(DIRECTORY rviz/   DESTINATION share/${PROJECT_NAME}/rviz)
ament_package()
