<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>3d_navi_bringup</name>
  <version>2.0.0</version>
  <description>Top-level bringup package for 3d-navi ROS2 Jazzy (sim + real)</description>
  <maintainer email="dev@3dnavi.dev">3d-navi</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>unitree_guide_ros2</exec_depend>
  <exec_depend>ego_planner</exec_depend>
  <exec_depend>pct_planner</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>fast_lio</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
