<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>path_searching</name>
  <version>2.0.0</version>
  <description>A* path search for EGO Planner (ROS2 port)</description>
  <maintainer email="dev@3dnavi.dev">3d-navi</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>Eigen3</depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
